tests/lean/indUsingTerm.lean.expected.out
indUsingTerm.lean:173:20-173:53: error: failed to elaborate eliminator, expected type is not available
indUsingTerm.lean:173:20-173:53: error: unexpected eliminator resulting type
  x_0
indUsingTerm.lean:175:26-177:53: error: unsolved goals
case mkA
a✝ : B
a_ih✝ : True
⊢ True

case A
⊢ True

case mkB
a✝ : A
a_ih✝ : True
⊢ True
